--- a/main.css
+++ b/main.css
@@ -37,7 +37,7 @@ a {
     color: white;
     text-decoration: none;
     background-color: #009688;
-    width: 100%;
+    width: 50%;
     padding: 10px 20px;
     text-align: center;
     font-size: 20px;
@@ -53,14 +53,14 @@ span {
     position: absolute;
     width: 40px;
     height: 40px;
-    right: 15px;
+    right: 135px;
     border: 1px solid white;
     border-radius: 50%;
     text-align: center;
 }
 
 #search-div {
-    width: 500px;
+    width: 450px;
     display: flex;
     justify-content: space-around;
     background-color: #7ebeb8;
@@ -104,7 +104,7 @@ span {
     border-radius: 20px;
     position: fixed;
     bottom: 20px;
-    right: 20px;
+    left: 500px;
     display: none;
     cursor: pointer;
     z-index: 999;
